# wierrebot

./: .gitignore  CHANGELOG  pyproject.toml  requirements.txt  test.wdb
.nada/: .nadaignore  .nadainclude  .nadainfo
wierre-bot/: __main__.py  bars.txt  quotes.txt
